kubernetes/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: lms
  labels:
    app: library-system
